# crafty-backend/docs/swagger.json
@@ -1,6 +1,6 @@
 {
     "schemes": [
-        "https"
+        "http"
     ],
     "swagger": "2.0",
     "info": {
@@ -17,7 +17,7 @@
         },
         "version": "1.0.0"
     },
-    "host": "crafty.kuranasaki.work",
+    "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
         "/post": {
@@ -45,6 +45,60 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/postAPI.UpdatePostRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Update User Success",
+                        "schema": {
+                            "$ref": "#/definitions/postAPI.UpdatePostResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid Token",
+                        "schema": {
+                            "$ref": "#/definitions/authMiddleware.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "No Permissions",
+                        "schema": {
+                            "$ref": "#/definitions/authMiddleware.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Update User Failed",
+                        "schema": {
+                            "$ref": "#/definitions/postAPI.UpdatePostResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Firebase": []
+                    }
+                ],
+                "description": "Create new post",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Post"
+                ],
+                "parameters": [
+                    {
+                        "description": "UpdateUser",
+                        "name": "UpdateUser",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/postAPI.CreatePostRequest"
                         }
                     }
                 ],
@@ -539,6 +593,14 @@
                 }
             }
         },
+        "postAPI.CreatePostRequest": {
+            "type": "object",
+            "properties": {
+                "post": {
+                    "$ref": "#/definitions/postAPI.Post"
+                }
+            }
+        },
         "postAPI.GetPostByIDResponse": {
             "type": "object",
             "properties": {
@@ -739,9 +801,9 @@
             "flow": "password",
             "tokenUrl": "https://crafty.kuranasaki.work/api/v1/auth/oauth/token",
             "scopes": {
-                "admin": "All Permissions Granted",
-                "mod": "All Permissions Except adding MOD",
-                "user": "Permissions granted upto project owner"
+                "admin": "  All Permissions Granted",
+                "mod": " All Permissions Except adding MOD",
+                "user": " Permissions granted upto project owner"
             }
         }
     }
