# crafty-backend/internal/app/user-api/pkg/post/route.go
@@ -16,8 +16,11 @@ func NewPostRouter(svc *service.ServiceRegistry) *PostRouter {
 
 func (api *PostRouter) SetupRoute(ro fiber.Router) {
 	handler := NewPostHandler(api.s)
+	ro.Get("/list", handler.ListPost)
 	ro.Get("/:postId", handler.GetPostInfo)
+	ro.Post("/", handler.CreatePost)
 	ro.Put("/", handler.UpdatePost)
 	ro.Delete("/", handler.DeletePost)
-	ro.Get("/list", handler.ListPost)
+
 }
+ 
